--- a/src/_layouts/base.webc
+++ b/src/_layouts/base.webc
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="/assets/css/global.css" webc:raw>  
+  <style @raw="getBundle('css')" webc:keep></style>
 
   <title>Lility</title>
 </head>
