--- a/src/assets/css/utility.css
+++ b/src/assets/css/utility.css
@@ -12,3 +12,7 @@
 .justify-content-center {justify-content: center}
 
 .align-items-center {align-items: center}
+
+.fw-bold {font-weight: bold}
+
+.color-inherit {color: inherit}
