--- a/src/assets/css/generics.css
+++ b/src/assets/css/generics.css
@@ -30,7 +30,6 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background-color: var(--secondary);
 }
 
 /* A elements that don't have a class get default styles */
@@ -51,4 +50,52 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+h1,h2,h3 {
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: var(--fs-2xl);
+}
+
+h2 {
+  font-size: var(--fs-xl);
+}
+
+h3 {
+  font-size: var(--fs-lg);
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+:where(h1,h2,h3) {
+  margin-block-start: calc(var(--stack) * 1.5);
+}
+
+:where(h1, h2, h3) + *:not(h1, h2, h3,div) {
+  margin-block-start: calc(var(--stack) / 1.5);
+}
+
+:where(p,iframe) {
+  margin-block-start: calc(var(--stack) / 1.5);
+}
+
+:where(h1,h2,h3:is(:first-of-type)) {
+  margin-block-start: 0;
 }
