💄 Add height, gap, background and alignment utilities

--- a/src/assets/css/utility.css
+++ b/src/assets/css/utility.css
@@ -1,9 +1,15 @@
 .w-2rem {width: 2rem}
+.h-50vh {height: 50vh}
 
 .list-style-none {list-style: none}
 
+.gap-2xs {gap: var(--s-2xs)}
+.gap-xs {gap: var(--s-xs)}
 .gap-sm {gap: var(--s-sm)}
 .gap-md {gap: var(--s-md)}
+
+.flex-grow-2 {flex-grow: 2}
+.flex-wrap {flex-wrap: wrap;}
 
 .mi-start-auto {margin-inline-start: auto}
 
@@ -16,3 +22,8 @@
 .fw-bold {font-weight: bold}
 
 .color-inherit {color: inherit}
+
+.bg-primary {background-color: var(--primary)}
+.bg-secondary {background-color: var(--secondary)}
+
+.text-align-center {text-align: center}
