--- a/src/assets/css/composition.css
+++ b/src/assets/css/composition.css
@@ -2,3 +2,13 @@
   display: flex;
   flex-direction: row;
 }
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
+  max-width: 56rem;
+  margin-inline: auto;
+}
