--- a/src/_includes/components/navbar.webc
+++ b/src/_includes/components/navbar.webc
@@ -1,12 +1,9 @@
-<nav class="flex-row p-md">
-  <div class="flex-row gap-sm align-items-center">
+<nav class="wrapper flex-row p-md">
+  <div class="flex-row gap-2xs align-items-center">
     <figure class="w-2rem">
-      <img
-        src="/assets/images/lility.webp"
-        webc:raw
-      >
+      <img :src="$data.site.logo">
     </figure>
-    <span class="fw-bold color-inherit">Lility</span>
+    <span class="fw-bold color-inherit" @text="$data.site.name"></span>
   </div>
 
   <ul class="flex-row align-items-center mi-start-auto list-style-none gap-md">
@@ -24,6 +21,7 @@
 const navLink = [
   { label: 'Home', url: '/' },
   { label: 'Blog', url: '/blog' },
-  { label: 'About', url: '/about' }
+  { label: 'Docs', url: '/docs' },
+  { label: 'About', url: '/about' },
 ]
 </script>
