--- a/src/_includes/components/landing-page/hero.webc
+++ b/src/_includes/components/landing-page/hero.webc
@@ -1,4 +1,4 @@
-<header class="wrapper flex-column p-md bg-primary">
+<header class="flex-column p-md bg-primary">
   <h1 class="text-align-center">11ty starter powered by WebC</h1>
   <p class="text-align-center">
     Ready for your personal blog or documentation web site.
