--- a/src/assets/css/generics.css
+++ b/src/assets/css/generics.css
@@ -69,7 +69,7 @@ h3 {
 }
 
 small {
-  font-size: var(--s-sm);
+  font-size: var(--fs-sm);
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@@ -97,7 +97,7 @@ small {
   margin-block-start: calc(var(--stack) / 1.5);
 }
 
-:where(p,iframe) {
+:where(p,small,iframe) {
   margin-block-start: calc(var(--stack) / 1.5);
 }
 
